I have reupdated the site

--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
 <link rel="stylesheet" href="/CSS/Menu.css">
 <link rel="stylesheet" href="/CSS/index.css">
 <link rel="stylesheet" href="/CSS/Payment.css">
-
 <link rel="stylesheet" href="/CSS/Footer.css">
     <title>Support</title>
     
 </head>
 <body>
-    <iframe src= "/Main/Header.html"onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
-    <iframe src= "/Main/Footer.html"onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
+    <iframe src= "/Public/Header.html"onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
+    <iframe src= "/Public/Footer.html"onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
    
     <div class="landingpage">
         <input type="file" name="" id="" accept="*/video">
