--- a/Users/login.html
+++ b/Users/login.html
@@ -2,12 +2,12 @@
 <link rel="stylesheet" href="/CSS/Menu.css">
 <link rel="stylesheet" href="/CSS/index.css">
 <link rel="stylesheet" href="/Users/Login.css">
-
+<link rel="stylesheet" href="/CSS/Footer.css">
 
 
 <body>
-    <iframe src= "/Main/Header.html"onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
-    <iframe src= "/Main/Footer.html"onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
+    <iframe src= "/Public/Header.html"onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
+    <iframe src= "/Public/Footer.html"onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
    
     <div class="login">
     <h1>Login/Register</h1>
